k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: server-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: server
    ports:
        - port: 5000 # access from outside objects through the service
          targetPort: 5000 # port on which the service sends requests to
